1190 - bug - URL not wrapping in table

--- a/app/assets/sass/uswds/_uswds-theme-custom-styles.scss
+++ b/app/assets/sass/uswds/_uswds-theme-custom-styles.scss
@@ -354,6 +354,7 @@ td.table-empty-message {
    }
    .file-list-hint {
       margin: 0;
+      word-break: break-word;
    }
    .table-field, .table-field-right-aligned {
       width: 50%;
